# libgadu

./: CMakeLists.txt
examples/: CMakeLists.txt
include/: libgadu.h.in
test/: CMakeLists.txt
test/automatic/: CMakeLists.txt
test/manual/: CMakeLists.txt
